[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotasdk"
dynamic = ['dependencies']
version = "v1.1.6"
authors = [
  { name="Zota Technology Pte Ltd", email="open-source@zota.com" },
]
description = "SDK Implementation of Zota's REST API for merchants."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/zotapay/python-sdk"
"Bug Tracker" = "https://github.com/zotapay/python-sdk/issues"
